enhance jdk8 parser for serial, cms and g1 printGCID events